--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "scripts": {
     "start": "node src/main.js",
-    "debug": "webpack --config fe-src/webpack.config.js"
+    "fe-debug": "webpack --config fe-src/webpack.config.debug.js",
+    "fe-build": "webpack --config fe-src/webpack.config.build.js",
+    "vue-concat-debug": "gulp concat-debug",
+    "vue-concat-build": "gulp concat"
   },
   "dependencies": {
     "koa": "^2.0.0-alpha.7",
@@ -23,6 +26,7 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babili-webpack-plugin": "0.0.2",
     "css-raw-loader": "^0.1.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
@@ -31,6 +35,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mysql": "^2.11.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
