--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "koa": "^2.0.0-alpha.7",
+    "koa-rewrite": "^2.1.0",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
     "vue": "^2.0.0-rc.4",
@@ -38,7 +39,6 @@
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
-    "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "webpack": "^2.1.0-beta.22"
   }
 }
