--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "scripts": {
     "start": "node src/main.js",
     "fe-debug": "webpack --config fe-src/webpack.config.debug.js",
-    "fe-build": "webpack --config fe-src/webpack.config.build.js",
-    "vue-concat-debug": "gulp concat-debug",
-    "vue-concat-build": "gulp concat"
+    "fe-build": "webpack --config fe-src/webpack.config.build.js && gulp concat",
+    "vue-concat-debug": "gulp concat-debug"
   },
   "dependencies": {
     "koa": "^2.0.0-alpha.7",
@@ -33,6 +32,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-strip-comments": "^2.4.3",
+    "html-webpack-plugin": "^2.22.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mysql": "^2.11.1",
