--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "koa-rewrite": "^2.1.0",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
-    "vue": "^2.0.0-rc.6",
+    "sequelize": "^3.24.3",
+    "vue": "^2.0.0-rc.7",
     "vue-router": "^2.0.0-rc.5",
-    "vuex": "^2.0.0-rc.5"
+    "vuex": "^2.0.0-rc.6"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
