--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue-concat-debug": "gulp concat-debug"
   },
   "dependencies": {
+    "graphql": "^0.7.0",
+    "graphql-sequelize": "^3.0.0-0",
     "koa": "^2.0.0-alpha.7",
     "koa-rewrite": "^2.1.0",
     "koa-router": "^7.0.1",
